--- a/web/css/theme_blue.css
+++ b/web/css/theme_blue.css
@@ -88,7 +88,7 @@ div.post-media h4 {
 	color: #007AFF;
 }
 .colored-top-bar #topbar {
-	background: #007AFF;
+	background: #363839;
 	color: #FFFFFF;
 	border-bottom: 1px solid #007AFF;
 }
